--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.22.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
