--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
+    "sweetalert2": "^11.7.12",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
