--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,10 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "msw": "^1.2.2",
     "prettier": "2.8.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
