--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "history": "^5.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
