--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-js-pagination": "^3.0.3",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-quill": "^2.0.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
