--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-use-pagination": "^2.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
