feat: add projects page and animation effects

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-use-pagination": "^2.0.1",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
     "sweetalert2": "^11.7.12",
