--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-html-parser": "^2.0.2",
     "react-js-pagination": "^3.0.3",
     "react-kakao-maps-sdk": "^1.1.9",
     "react-loader-spinner": "^5.3.4",
