core: 미추가 패키지 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,9 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-stars": "^2.2.5",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "react-use-pagination": "^2.0.1",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
